# datasplitter

./: Cargo.toml  deploy.sh
src/: main.rs
