[package]
name = "datasplitter"
version = "0.1.0"
authors = ["dskleingeld <dskleingeldgmail.com>"]
edition = "2018"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true

panic = 'unwind'
debug = true
debug-assertions = true
overflow-checks = true

[dependencies]
futures = "0.3.1"
actix-rt = "1.0"
actix-web = { version = "2" }

reqwest = { version = "0.10", features = ["rustls-tls"] }
structopt = { version = "0.3" }
